<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/questionsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/questions"
        android:hint="@string/questions"
        android:inputType="textMultiLine" />


    <EditText
        android:id="@+id/answersView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionsView"
        android:hint="@string/answers"
        android:layout_margin="10dp"
        android:autofillHints="@string/answers"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/customClassView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answersView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/custom_class"
        android:hint="@string/custom_class"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/customClassView">

        <CheckBox
            android:id="@+id/isTeachableSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/teachable_reaction" />

        <Button
            android:id="@+id/deleteReactionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/delete" />
    </LinearLayout>

    <Button
        android:id="@+id/updateReactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save" />

</RelativeLayout>